--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -51,7 +51,6 @@
 	number       = {4},
 	pages        = {663--686},
 	doi          = {doi:10.1515/ling.1989.27.4.663},
-	url          = {https://doi.org/10.1515/ling.1989.27.4.663},
 	lastchecked  = {2022-07-18}
 }
 @book{belleza1995jaqaru,
@@ -26068,4 +26067,46 @@ article{potts2007expressive,
 	ozbib_id     = {1670},
 	ozbibreftype = {17},
 	src          = {ozbib, wals}
+}
+@article{taylor1999,
+	title        = {Grammatical relations and ergativity in {S}t'at'imcets ({Lillooet Salish})},
+	author       = {Roberts, Taylor},
+	year         = {1999},
+	journal      = {International Jounral of American Linguistics},
+	volume       = {65},
+	number       = {3},
+	pages        = {275--302},
+	keywords     = {Salishan languages, grammatical relations}
+}
+@article{Hewitt1987Georgian,
+	title        = {Georgian: ergative or active?},
+	author       = {Hewitt, Brian George},
+	year         = {1987},
+	journal      = {Lingua},
+	volume       = {71},
+	keywords     = {Kartvelian languages}
+}
+@misc{cable2023pc,
+	author       = {Cable, Seth},
+	year         = {2023},
+	month        = {03},
+	day          = {31},
+	howpublished = {personal communication}
+}
+@phdthesis{talmy1972semantic,
+	title        = {Semantic structures in {English} and {Atsugewi}},
+	author       = {Talmy, Leonard},
+	year         = {1972},
+	type         = {{PhD} {Diss}.},
+	school       = {University of California. Berkeley}
+}
+@book{story1973tlingit,
+	title        = {Tlingit {Verb} {Dictionary}},
+	author       = {Story, Gillian L. and Naish, Constance},
+	year         = {1973},
+	publisher    = {Alaska Native Language Center},
+	address      = {Fairbanks},
+	url          = {http://www.uaf.edu/anla/item.xml?id=TL959NS1973},
+	note         = {Pages: 393},
+	file         = {Glottolog 4.7 - Story, Gillian L. and Naish, Constance 1973:/Users/marine/Zotero/storage/S9ZXNHWM/172384.html:text/html}
 }
